--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -1,23 +1,38 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+<nav class="navbar navbar-expand-lg navbar-dark bg dark">
+  <div class="container">
+    <a class="navbar-brand" href="/ ">Bloc de productos</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+      <ul class="navbar-nav ml-auto">
+        {{#if user}}
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            Productos
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="/productos">Todos los productos</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="/productos/add">Agregar productos</a>
+          </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Features</a>
+          <a href="/profile" class="nav-link">Perfil</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Pricing</a>
+          <a href="/logout" class="nav-link">logout</a>
+        </li>
+        {{else}}
+        <li class="nav-item">
+          <a href="/signup" class="nav-link">Empezar</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link disabled">Disabled</a>
+          <a href="/login" class="nav-link">Iniciar</a>
         </li>
+        {{/if}}
       </ul>
     </div>
   </div>
