--- a/src/views/auth/signup.hbs
+++ b/src/views/auth/signup.hbs
@@ -8,7 +8,7 @@
                 <div class="card-body">
                     <form action="/signup" method="post">
                         <div class="form-group">
-                            <input type="text" name="nombreCompleto" placeholder="Nombre de usuario" class="form-control" autofocus>
+                            <input type="text" name="nombre" placeholder="Nombre de usuario" class="form-control" autofocus>
                         </div>
                         <div class="form-group">
                             <input type="password" name="password" placeholder="Contraseña" class="form-control">
